log/build_2026-02-20_16-57-54/mobile_robot/stderr.log
  File "/home/russe/Autonomous_Robot/install/mobile_robot/lib/python3.12/site-packages/mobile_robot/find.py", line 29
    if math.isinf(r) or math.isnan(r)
                                     ^
SyntaxError: expected ':'

